@@ -80,7 +80,7 @@ void CTelnetView::OnTextInput(const gchar* text)
 		GdkEventButton t_PseudoEvent;
 		t_PseudoEvent.x = 0;
 		t_PseudoEvent.y = 0;
-		t_PseudoEvent.type = GDK_BUTTON_PRESS; 
+		t_PseudoEvent.type = GDK_BUTTON_PRESS;
 		CTermView::OnLButtonDown(&t_PseudoEvent);
 		CTermView::OnLButtonUp(&t_PseudoEvent);
 	}
@@ -206,11 +206,11 @@ void CTelnetView::OnMouseMove(GdkEventMotion* evt)
 {
   if( !m_pTermData )
     return;
-  
+
   int x = (int)evt->x;
   int y = (int)evt->y;
   bool left;
-  
+
   INFO("x=%d, y=%d, grab=%d", x, y, HasCapture());
 
   this->PointToLineCol( &x, &y, &left );
@@ -224,12 +224,12 @@ void CTelnetView::OnMouseMove(GdkEventMotion* evt)
 	  m_Caret.Hide();
 
 	  m_pTermData->m_Sel->ChangeEnd( y, x, left, DrawCharWrapper, this );
-	  
+
 	  // Show the caret again but only set its visibility without
 	  // display it immediatly.
 	  m_Caret.Show( false );
 #ifdef USE_MOUSE
-	  {gdk_window_set_cursor(m_Widget->window, NULL);m_CursorState=0;}	  
+	  {gdk_window_set_cursor(m_Widget->window, NULL);m_CursorState=0;}
 #endif
 	}
     }
@@ -297,15 +297,15 @@ void CTelnetView::OnMouseMove(GdkEventMotion* evt)
 		{gdk_window_set_cursor(m_Widget->window, m_PageDownCursor);m_CursorState=3;}
 		else
 		{gdk_window_set_cursor(m_Widget->window, m_PageUpCursor);m_CursorState=4;}
-	      }					
+	      }
 	      else
 	      {gdk_window_set_cursor(m_Widget->window, m_BullsEyeCursor);m_CursorState=2;}
-	    }      
+	    }
 	    else if ( y==1 || y==2 )
 	    {gdk_window_set_cursor(m_Widget->window, m_PageUpCursor);m_CursorState=4;}
-	    else if ( y==0 ) 
+	    else if ( y==0 )
 	    {gdk_window_set_cursor(m_Widget->window, m_HomeCursor);m_CursorState=6;}
-	    else //if ( y = m_pTermData->m_RowsPerPage-1) 
+	    else //if ( y = m_pTermData->m_RowsPerPage-1)
 	    {gdk_window_set_cursor(m_Widget->window, m_EndCursor);m_CursorState=5;}
 	    break;
 	  case 2: //READING
@@ -317,7 +317,7 @@ void CTelnetView::OnMouseMove(GdkEventMotion* evt)
 	    {gdk_window_set_cursor(m_Widget->window, m_PageUpCursor);m_CursorState=4;}
 	    else
 	    {gdk_window_set_cursor(m_Widget->window, m_PageDownCursor);m_CursorState=3;}
-	    break;  
+	    break;
 	  case 0: //MENU
 	    if ( y>0 && y < m_pTermData->m_RowsPerPage-1 )
 	    {
@@ -325,8 +325,8 @@ void CTelnetView::OnMouseMove(GdkEventMotion* evt)
 	      {gdk_window_set_cursor(m_Widget->window, m_BullsEyeCursor);m_CursorState=2;}
 	      else
 	      {gdk_window_set_cursor(m_Widget->window, m_ExitCursor);m_CursorState=1;}
-	    }      
-	    else    
+	    }
+	    else
 	    {gdk_window_set_cursor(m_Widget->window, NULL);m_CursorState=0;}
 	    break;
 	  default:
@@ -367,7 +367,7 @@ void CTelnetView::OnMouseScroll(GdkEventScroll* evt)
 void CTelnetView::OnLButtonUp(GdkEventButton* evt)
 {
 	CTermView::OnLButtonUp(evt);
-    
+
 	if( !m_pTermData )
 		return;
 
@@ -396,14 +396,14 @@ void CTelnetView::OnLButtonUp(GdkEventButton* evt)
 
 	int cur = m_CursorState;
 	int ps = ((CTelnetCon*)m_pTermData)->GetPageState();
-    
+
 	if ( cur == 2 ) // mouse on entering mode
 	  {
 	    switch (ps)
 	      {
 	      case 1: // list
-		{        
-		  int n = y - m_pTermData->m_CaretPos.y; 
+		{
+		  int n = y - m_pTermData->m_CaretPos.y;
 		  if ( n>0 )
 		    while(n)
 		      {
@@ -412,13 +412,13 @@ void CTelnetView::OnLButtonUp(GdkEventButton* evt)
 		      }
 		  if ( n<0 )
 		    {
-		      n=-n;   
+		      n=-n;
 		      while(n)
 			{
-			  GetCon()->SendRawString("\x1bOA",3); 
+			  GetCon()->SendRawString("\x1bOA",3);
 			  n--;
 			}
-		    }                                      
+		    }
 		  GetCon()->SendRawString("\r",1); //return key
 		  break;
 		}
@@ -426,15 +426,15 @@ void CTelnetView::OnLButtonUp(GdkEventButton* evt)
 		{
 		  char cMenu = ((CTelnetCon*)m_pTermData)->GetMenuChar(y);
 		  GetCon()->SendRawString( &cMenu, 1 );
-		  GetCon()->SendRawString( "\r", 1 );    
-		  break;      
-		} 
+		  GetCon()->SendRawString( "\r", 1 );
+		  break;
+		}
 	      case -1: // normal
-		GetCon()->SendRawString( "\r", 1 );   
-		break;                       
+		GetCon()->SendRawString( "\r", 1 );
+		break;
 	      default:
-		break;      
-	      }     
+		break;
+	      }
 	  }
 	else if (cur == 1)
 	  GetCon()->SendRawString("\x1bOD",3); //exiting mode
@@ -447,7 +447,7 @@ void CTelnetView::OnLButtonUp(GdkEventButton* evt)
 	else if (cur == 3)
 	  GetCon()->SendRawString("\x1b[6~",4); //pagedown
 	else
-	  GetCon()->SendRawString( "\r", 1 );                                        
+	  GetCon()->SendRawString( "\r", 1 );
 }
 #endif  // defined(USE_MOUSE) && !defined(MOZ_PLUGIN)
 
@@ -473,12 +473,12 @@ void CTelnetView::OnRButtonDown(GdkEventButton* evt)
 			GtkWidget* item = gtk_image_menu_item_new_with_mnemonic( _("_Copy URL to Clipboard") );
 			GtkWidget* icon = gtk_image_new_from_stock ("gtk-copy", GTK_ICON_SIZE_MENU);
 			gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), icon);
-			g_signal_connect( G_OBJECT(item), "activate", 
+			g_signal_connect( G_OBJECT(item), "activate",
 							G_CALLBACK(on_hyperlink_copy), &do_copy);
 
 			gtk_menu_shell_append  ((GtkMenuShell *)popup, item );
 			gtk_widget_show_all(popup);
-			g_signal_connect( G_OBJECT(popup), "deactivate", 
+			g_signal_connect( G_OBJECT(popup), "deactivate",
 							G_CALLBACK(gtk_main_quit), this);
 			gtk_menu_popup( (GtkMenu*)popup, NULL, NULL, NULL, NULL, evt->button, evt->time );
 			gtk_main();		// Don't return until the menu is closed.
@@ -486,7 +486,7 @@ void CTelnetView::OnRButtonDown(GdkEventButton* evt)
 			if( do_copy )
 			{
 				// Note by Hong Jen Yee (PCMan):
-				// Theoratically, there is no non-ASCII characters in standard URL, 
+				// Theoratically, there is no non-ASCII characters in standard URL,
 				// so we don't need to do UTF-8 conversion at all.
 				// However, users are always right.
 				string url( (pline+start), (int)(end-start) );
@@ -559,7 +559,7 @@ void CTelnetView::DoPasteFromClipboard(string text, bool contain_ansi_color)
 		}
 		else
 		{
-			// Only when no control character is in this string can 
+			// Only when no control character is in this string can
 			// autowrap be enabled
 			unsigned int len = 0, max_len = GetCon()->m_Site.m_AutoWrapOnPaste;
 			gsize convl;
@@ -701,7 +701,10 @@ void CTelnetView::OnHyperlinkClicked(string sURL)
 		memcpy( &cmdline[app.length() + 1], sURL.c_str(), sURL.length() + 1);
 	}
 	strcat(cmdline, " &");	// launch the browser in background.
-	system(cmdline);	// Is this portable?
+	if (system(cmdline) == -1)	// Is this portable?
+	{
+		g_print("Run `%s` failed.\n", cmdline);
+	}
 	delete []cmdline;
 }
 
